# datajax

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_native_plan.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: feature_pipeline.py
datajax/: __init__.py
datajax/api/: __init__.py  djit.py  sharding.py  transforms.py
datajax/cli/: __init__.py  export_wavespec.py  replay_tuner.py
datajax/frame/: __init__.py  frame.py
datajax/io/: __init__.py  exporter.py  parquet.py
datajax/ir/: graph.py  join_semantics.py  serialize.py
datajax/jax_bridge/: __init__.py  lowering.py  tpu_adapter.py
datajax/planner/: __init__.py  execute.py  metrics.py  optimizer.py  plan.py  replay.py
datajax/runtime/: __init__.py  bodo_codegen.py  bodo_native.py  bodo_pipeline.py  bodo_plan.py  bodo_stub.py  executor.py  mesh.py  plan_diagnostics.py
docs/: development_plan.md  native_plan.md  offline_intelligence.md  tpu_integration.md
experiments/: debug_dtype.py  debug_scaling.py  export_wavespec.py  replay_tuner.py  test_fix.py
tests/: conftest.py
tests/api/: test_djit_pipeline.py
tests/assets/: sample_logs.csv
tests/experiments/: test_cli_smoke.py
tests/frame/: test_frame_ops.py
tests/io/: test_exporter.py
tests/ir/: test_serialize.py
tests/jax_bridge/: test_lowering.py  test_tpu_adapter.py
tests/parity/: test_relational_parity.py
tests/planner/: test_metrics_extensions.py  test_optimizer.py  test_replay.py
tests/runtime/: test_bodo_plan.py  test_mesh_plan.py
